--- a/release.html
+++ b/release.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
+  <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">  --> 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/ style-settings.css">
@@ -115,19 +115,19 @@
     
     <aside class="right-column">
       <div class="composition-top">
-      <div class="composition-top__images">
-        <a href="composition.html=829">
-          <img src="img/320-180_00829.jpg" width="320" height="180" alt="Обкладинка до композиції Крила - Jamala (Ukrainian national selection Eurovision Song Contest - 2018)">
-        </a>
-      </div>
-      <h3 class="composition-top__title">
-        <a href="composition.html=829" alt="Перейти на сторінку композиції Крила - Jamala (Ukrainian national selection Eurovision Song Contest - 2018)">
-          <span class="composition-top__name">Крила</span> - <span class="composition-top__performer">Jamala</span>
-        </a>
-      </h3>
+        <div class="composition-top__images">
+          <a href="composition.html=829">
+            <img src="img/320-180_00829.jpg" width="320" height="180" alt="Обкладинка до композиції Крила - Jamala (Ukrainian national selection Eurovision Song Contest - 2018)">
+          </a>
+        </div>
+        <h3 class="composition-top__title">
+          <a href="composition.html=829" alt="Перейти на сторінку композиції Крила - Jamala (Ukrainian national selection Eurovision Song Contest - 2018)">
+            <span class="composition-top__name">Крила</span> - <span class="composition-top__performer">Jamala</span>
+          </a>
+        </h3>
       </div>
       <div class="right-column__container">
-        <div class="right-column__banner"><!-- Банер 300 * 600 --></div>
+        <div class="right-column__banner"></div>
       </div>
     </aside>
   </div>
