--- a/composition.html
+++ b/composition.html
@@ -212,7 +212,7 @@
         <footer class="composition__release release-promo">
           <div class="release-promo__picture">
             <a href="release.html">
-              <img src="img_set/cd--75.png" width="100" height="100" alt="Промо альбом Тільки тебе - Наталія Гордієнко">
+              <img src="img_set/cd-100.png" width="100" height="100" alt="Промо альбом Тільки тебе - Наталія Гордієнко">
             </a>
           </div>
           <div class="release-promo__info">
