--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <p class="pryspiv">
           Сховай мене від ілюзій… <br>
           </p>    
-          <p class="lyric__end">* * *</p>
+          <p class="the-end">* * *</p>
         </section>
         
         <footer class="composition__release release-promo">
