--- a/index.html
+++ b/index.html
@@ -273,6 +273,24 @@
   </div>
   
   <footer class="page-footer">
+    <div class="page-footer__container">
+      <div class="page-footer__banner"></div>
+      <div class="banner__728-90--ubn none">
+        <!-- Ukrainian Banner Network 728х90 START -->
+        <center><script type='text/javascript'>
+        var _ubn=_ubn||{sid:Math.round((Math.random()*10000000)),data:[]};
+        (function(){var n=document.getElementsByTagName('script');
+        _ubn.data.push({user: 110190, format_id: 12, page: 1,
+        pid: Math.round((Math.random()*10000000)),placeholder: n[n.length-1]});
+        if(!_ubn.code)(function() {var script = document.createElement('script');
+        script.type = 'text/javascript'; _ubn.code= script.async = script.defer = true;
+        script.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'banner.kiev.ua/j/banner.js?'+_ubn.sid;
+        n[0].parentNode.insertBefore(script,n[0]);})();})();
+        </script><br>
+        <small><a href='https://www.bannerka.ua/' target=_top>Інтернет реклама УБС</a></small></center>
+        <!-- Ukrainian Banner Network 728х90 END -->
+      </div>
+    </div>
     <div class="page-footer__wrapper">
       <!-- <div class="page-footer__adaptive-container"> -->
       <div class="page-footer__top">
