add search form markup
add search form markup

додаю розмітку форми пошуку

--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
     <div class="page-header__wrapper-top">
       <div class="page-header__top">
         <a class="page-header__logo" href="http://www.pisnya.org.ua">
-          <img class="page-header__logo-image" src="img_set/pisnya-logo.svg" alt="Логотип 'Українська пісня'" width="200" height="100%">
+          <img class="page-header__logo-image" src="img_set/pisnya-logo.svg" alt="Логотип 'Українська пісня'" width="220" height="80">
         </a>
+        <div class="page-header__search">
+          <script>
+            (function() {
+              var cx = '002437151386068426871:sz5hougclxe';
+              var gcse = document.createElement('script');
+              gcse.type = 'text/javascript';
+              gcse.async = true;
+              gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+              var s = document.getElementsByTagName('script')[0];
+              s.parentNode.insertBefore(gcse, s);
+            })();
+          </script>
+          <gcse:searchbox-only></gcse:searchbox-only>
+        </div>
       </div>
     </div>
     <nav class="site-nav site-nav--closed site-nav--nojs">
