add markup for banner ads
add markup for banner ads

додаю розмітку для банерної реклами

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
           <gcse:searchbox-only></gcse:searchbox-only>
         </div>
       </div>
+      <div class="page-header__banner">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5263388593883274"
+             crossorigin="anonymous"></script>
+        <!-- page-header__banner--adp -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-5263388593883274"
+             data-ad-slot="7075152036"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </div>
     <nav class="site-nav site-nav--closed site-nav--nojs">
       <button class="site-nav__toggle" type="button"><span class="visually-hidden">Відкрити меню</span></button>
@@ -209,7 +223,6 @@
           Із ілюзій, із ілюзій, із ілюзій. <br>
           </p>
           <p class="pryspiv">
-
           Сховай мене від ілюзій… <br>
           На-на-на-на... <br>
           Сховай мене від ілюзій <br>
@@ -260,6 +273,11 @@
   </div>
   <footer class="page-footer">
     <div class="page-footer__container">
+      <div class="page-footer__banner">
+        <!-- script google adsense banner -->
+        
+        <!-- / script google adsense banner -->
+      </div>
     </div>
     <div class="page-footer__wrapper">
       <!-- <div class="page-footer__adaptive-container"> -->
