--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <header class="page-header">
     <div class="page-header__wrapper-top">
       <div class="page-header__top">
-        <a class="page-header__logo" href="http://www.pisnya.org.ua">
+        <a class="page-header__logo" href="https://www.pisnya.org.ua">
           <img class="page-header__logo-image" src="img_set/pisnya-logo.svg" alt="Логотип 'Українська пісня'" width="220" height="80">
         </a>
         <div class="page-header__search">
+          <!-- script google search -->
           <script>
             (function() {
               var cx = '002437151386068426871:sz5hougclxe';
@@ -31,9 +32,11 @@
             })();
           </script>
           <gcse:searchbox-only></gcse:searchbox-only>
+          <!-- / script google search -->
         </div>
       </div>
       <div class="page-header__banner">
+        <!-- script google adsense page-header__banner--adp -->
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5263388593883274"
              crossorigin="anonymous"></script>
         <!-- page-header__banner--adp -->
@@ -46,6 +49,7 @@
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+        <!-- / script google adsense page-header__banner--adp -->
       </div>
     </div>
     <nav class="site-nav site-nav--closed site-nav--nojs">
@@ -154,7 +158,10 @@
         <p class="the-end">* * *</p>
       </section>
       <div class="page-main__container">
-        <div class="page-main__banner"></div>
+        <div class="page-main__banner">
+        </div>
+        <div class="page-main__banner--middle">
+        </div>
       </div>
       <div class="section__caption">#Композиція дня</div>
       <article class="composition" id="composition">
@@ -170,7 +177,8 @@
           </p>
           <p class="composition__performer">
             <span class="visually-hidden">Виконавець: </span>
-            <a class="performer" href='performance.html'>On I Ona</a>
+            <!-- <a class="performer" href='performance.html'>On I Ona</a> -->
+            <a class="performer" href='artist.html'>On I Ona</a>
           </p>
           <p class="composition__author">
             <span class="composition__label">Слова: </span>
@@ -340,7 +348,7 @@
       </div>
       <section class="page-footer__bottom">
         <p class="page-footer__copyright">
-          <span>Проект "Українська пісня"</span> <span class="br">|</span> <span>© 2003 - 2018 Всі права застережено</span>
+          <span>Проект "Українська пісня"</span> <span class="br">|</span> <span>© 2003 - 2022 Всі права застережено</span>
         </p>
         <p class="page-footer__development">
           <a href="#">Зроблено з <span class="page-footer__heart">любов'ю</span> до людей!</a>
