change page artist.html

--- a/artist.html
+++ b/artist.html
@@ -100,7 +100,8 @@
               <a class="compositions__link" href="composition.html=838">Ти любов моя</a>
             </li>
           </ul>
-          <p class="">Дивись також: </p>  <p class="the-end">* * *</p>
+          <p class="composition__subject"><span>Дивитись також: </span><a class="authors__link" href="subject.html">Джамала / Іван Клименко</a> </p>
+          <p class="the-end">* * *</p>
           <!-- /list -->
         </section>
         <div class="page-main__container">
