--- a/musicauthor.html
+++ b/musicauthor.html
@@ -16,7 +16,7 @@
   <header class="page-header">
     <div class="page-header__wrapper-top">
       <div class="page-header__top">
-        <a class="page-header__logo" href="http://www.pisnya.org.ua">
+        <a class="page-header__logo" href="https://www.pisnya.org.ua">
           <img class="page-header__logo-image" src="img_set/pisnya-logo.svg" alt="Логотип 'Українська пісня'" width="200" height="100%">
         </a>
       </div>
@@ -65,37 +65,26 @@
     </aside>
     <main class="page-main">
       <h1 class="page__title">Олексій On Мартиненко, Альона Ona Жигарьова</h1>
-<!--<p class="page__description"></p>-->
-
-<section class="compositions">
-  <p class="section__caption">#Композиції</p>
-  <ul class="compositions__list">
+      <!--<p class="page__description"></p>-->
+      <div class="section__caption">#Композиції</div>
+      <section class="compositions">
+        <ul class="compositions__list">
           <li class="compositions__item">
             <a class="compositions__link" href="composition.html">Від ілюзій - On I Ona</a>
           </li>
-        </ul><ul class="compositions__list">
+        </ul>
+        <ul class="compositions__list">
           <li class="compositions__item">
             <a class="compositions__link" href="composition.html">Від ілюзій (bossa nova version) - On I Ona</a>
           </li>
-        </ul><p class="composition__subject">
-        <span>Дивитись також: </span><a class="authors__link" href="subject.html">Олексій Мартиненко</a><a class="authors__link" href="subject.html">Альона Жигарьова</a></p>  <p class="the-end">* * *</p>
-</section>
-
+        </ul>
+        <p class="composition__subject"><span>Дивитись також: </span><a class="authors__link" href="subject.html">Олексій Мартиненко</a> <a class="authors__link" href="subject.html">Альона Жигарьова</a></p>
+        <p class="the-end">* * *</p>
+      </section>
       <div class="page-main__container">
         <div class="page-main__banner"></div>
-        <div class="banner__468-60--ubn none">
-          <!-- Ukrainian Banner Network 468x60 START -->
-          <script type='text/javascript'>
-          var _ubn=_ubn||{sid:Math.round((Math.random()*10000000)),data:[]};
-          (function(){var n=document.getElementsByTagName('script');
-          _ubn.data.push({user: 110190, format_id: 31, page: 1,
-          pid: Math.round((Math.random()*10000000)),placeholder: n[n.length-1]});
-          if(!_ubn.code)(function() {var script = document.createElement('script');
-          script.type = 'text/javascript'; _ubn.code= script.async = script.defer = true;
-          script.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'banner.kiev.ua/j/banner.js?'+_ubn.sid;
-          n[0].parentNode.insertBefore(script,n[0]);})();})();
-          </script>
-          <!-- Ukrainian Banner Network 468x60 END -->
+        <div class="page-main__banner--midle">
+        
         </div>
       </div>
     </main>
@@ -183,7 +172,7 @@
       
       <section class="page-footer__bottom">
         <p class="page-footer__copyright">
-          <span>Проект "Українська пісня"</span> <span class="br">|</span> <span>© 2003 - 2018 Всі права застережено</span>
+          <span>Проект "Українська пісня"</span> <span class="br">|</span> <span>© 2003 - 2022 Всі права застережено</span>
         </p>
         <p class="page-footer__development">
           <a href="#">Зроблено з <span class="page-footer__heart">любов'ю</span> до людей!</a>
