set <meta charset="utf-8">

--- a/chronology.html
+++ b/chronology.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
+  <meta charset="utf-8">
   <title>-:- УП 3.6 -:- Хронологія сайту</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Хронологічний перелік опублікованих на сайті музичних та пісенних композиції">
@@ -380,7 +380,7 @@
           </li>
         </ul>
         <div class="pstrnav">
-          <b>1</b> | <a href=chronology.php?page=2>2</a> | <a href=chronology.php?page=3>3</a> | <a href=chronology.php?page=4>4</a> | <a title="РќР°СЃС‚СѓРїРЅР°" href=chronology.php?page=2> > </a> | <a title="РћСЃС‚Р°РЅРЅСЏ" href=chronology.php?page=13> >>> </a>
+          <b>1</b> | <a href="chronology.php?page=2">2</a> | <a href="chronology.php?page=3">3</a> | <a href="chronology.php?page=4">4</a> | <a title="Наступна" href="chronology.php?page=2"> > </a> | <a title="Остання" href="chronology.php?page=13"> >>> </a>
         </div>
         <p class="the-end">* * *</p>
         <!-- /list -->
