--- a/composition.html
+++ b/composition.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
-  <title>-:- УП 3.6 -:- Тільки тебе - Наталія Гордієнко -:- текст та відео до композиції... -:- </title>
+  <meta charset="utf-8">
+  <title>v3.6 Наталія Гордієнко - Тільки тебе -:- текст та відео до композиції... -:- </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Проект \"Українська пісня\" представляє" Наталія Гордієнко з композицією "Тільки тебе", відео та текст твору, інформацію про його авторів та виконавців.">
   <meta name="keywords" content="Тільки тебе, Гордієнко Наталія">
