--- a/performers.html
+++ b/performers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
+  <meta charset="utf-8">
   <title>-:- УП 3.6 -:- Jamala (Джамала)</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
