--- a/musicauthors.html
+++ b/musicauthors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
+  <meta charset="utf-8">
   <title>-:- УП 3.6 -:- Композитори та автори музики</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Композитори, автори музики та аранжування">
