--- a/release.html
+++ b/release.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
+  <meta charset="utf-8">
   <title>-:- УП 3.6 -:- Від ілюзій - On i Ona (2017, альбом)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
