--- a/subject.html
+++ b/subject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="windows-1251">
+    <meta charset="utf-8">
     <title>-:- УП 3.6 -:- Іван Клименко (категорія: автор слів/автор тексту/поет)</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
