--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="windows-1251">
+  <meta charset="utf-8">
   <title>-:- УП 3.6 -:- Кіно та відеокліпи на популярні українські пісні</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Музичні кіно та відеокліпи, концертні записи та записи телетрансляцій, музичні фільми">
